feat: add lint setup

--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "install:browsers": "npx playwright install chromium --with-deps",
+    "dev": "npx playwright test --ui",
+    "test": "npx playwright test",
+    "lint": "eslint .",
+    "show:report": "npx playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.44.1",
-    "@types/node": "^20.14.5"
+    "@types/node": "^20.14.5",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "typescript-eslint": "^7.11.0"
   }
 }
