--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -42,7 +42,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.branchName }}
-          fetch-depth: 2
+          fetch-depth: 0
+          clean: true
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
