--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -44,9 +44,6 @@ jobs:
           ref: ${{ github.event.client_payload.branchName }}
           fetch-depth: 0
           clean: true
-      - run: |
-          git checkout ${{ github.event.client_payload.branchName }}
-          git pull origin ${{ github.event.client_payload.branchName }}
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -66,6 +63,7 @@ jobs:
           echo version=`npm view @empiricalrun/test-gen version` >> "$GITHUB_OUTPUT"
       - name: Create Pull Request
         id: cpr
+        if: github.event.client_payload.branchName == 'main'
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.PAT }}
@@ -92,6 +90,22 @@ jobs:
           -d '{"pull_request": "${{ steps.cpr.outputs.pull-request-url }}"}'
         env:
           TOKEN: ${{ github.event.client_payload.token }}
+      - name: Configure Git
+        if: github.event.client_payload.branchName != 'main'
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Commit changes
+        if: github.event.client_payload.branchName != 'main'
+        run: |
+          git add .
+          git commit -m "Automated commit by GitHub Action"
+      - name: Push changes
+        if: github.event.client_payload.branchName != 'main'
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.PAT }}
+          branch: ${{ github.event.client_payload.branchName }}
       - name: Send successful PR creation slack update
         uses: slackapi/slack-github-action@v1.26.0
         if: ${{ steps.cpr.outputs.pull-request-number }}
