--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -93,8 +93,8 @@ jobs:
       - name: Configure Git
         if: github.event.client_payload.branchName != 'main'
         run: |
-          git config --global user.name "empirical"
-          git config --global user.email "saikatmitra91@gmail.com"
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
       - name: Commit changes
         if: github.event.client_payload.branchName != 'main'
         run: |
