--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -44,6 +44,7 @@ jobs:
           ref: ${{ github.event.client_payload.branchName }}
           fetch-depth: 0
           clean: true
+          token: ${{ secrets.PAT_TOKEN }}
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
