ci: turn off gen-test workflow v1

--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -1,8 +1,8 @@
 name: Generate tests
 
 on:
-  repository_dispatch:
-    types: [gen-test]
+  # repository_dispatch:
+  #   types: [gen-test]
   workflow_dispatch:
 
 env:
