--- a/.github/workflows/generate-tests.yml
+++ b/.github/workflows/generate-tests.yml
@@ -9,7 +9,15 @@ jobs:
   generate_tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout GitHub Actions Repo
+      - name: Check out repo
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.client_payload.branchName }}
+          fetch-depth: 0
+          clean: true
+          token: ${{ secrets.PAT }}
+
+      - name: Check out test-generator repo
         uses: actions/checkout@v4
         with:
           repository: empirical-run/test-generator
