--- a/.github/workflows/generate-test.yml
+++ b/.github/workflows/generate-test.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: empirical-run/test-generator
-          ref: feat/add-dashboard-sink
+          ref: feat/install-test-gen
           token: ${{ secrets.PAT }}
           path: .github/test-gen-repo
 
