--- a/.github/workflows/generate-test.yml
+++ b/.github/workflows/generate-test.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: empirical-run/test-generator
-          ref: main
+          ref: ci/new-reporter
           token: ${{ secrets.PAT }}
           path: .github/test-gen-repo
 
