--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@empiricalrun/playwright-utils": "^0.0.1-beta.1",
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.14.5",
     "eslint": "8.57.0",
@@ -23,5 +24,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.2.0",
     "typescript-eslint": "^7.11.0"
-  }
+  },
+  "dependencies": {}
 }
