Expose domain dashboard env var (#68)

--- a/.github/workflows/generate-test.yml
+++ b/.github/workflows/generate-test.yml
@@ -21,3 +21,4 @@ jobs:
         with:
           PAT: ${{ secrets.PAT }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          DASHBOARD_DOMAIN: ${{ secrets.DASHBOARD_DOMAIN }}
