--- a/.github/workflows/generate-test.yml
+++ b/.github/workflows/generate-test.yml
@@ -21,3 +21,5 @@ jobs:
         with:
           PAT: ${{ secrets.PAT }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
