feat: enable cross browser tests (#109)
* feat: enable cross browser tests

* fix install:browsers script

* ci: switch to macos

* use ref

* trigger

* trigger

* trigger

* change quotes

* escape

* change args

* trigger

* change runner to warp-macos-latest-arm64-6x

* undo ref

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,9 @@ on:
     branches: main
     paths:
       - "tests/**"
+      - "playwright.config.ts"
       - ".github/workflows/run-tests.yml"
+
 
 jobs:
   run_tests:
@@ -23,7 +25,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: fix/test-new-reporter
+          ref: main
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
