--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install:browsers": "npx playwright install chromium --with-deps",
+    "install:browsers": "npx playwright install --with-deps",
     "dev": "npx playwright test --ui",
     "test": "npx playwright test",
     "lint": "eslint .",
