--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: main
+          ref: test-trigger-type-reporter
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
