--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@empiricalrun/playwright-utils": "^0.9.2",
+    "@empiricalrun/playwright-utils": "^0.9.3-reporter-revert.2",
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.14.5",
     "eslint": "8.57.0",
