--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: main
+          ref: feat/update-test-runner-task
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
