chore: cleanup package json (#242)

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@empiricalrun/playwright-utils": "^0.13.5"
+  },
   "devDependencies": {
-    "@empiricalrun/playwright-utils": "^0.13.5",
     "@playwright/test": "^1.47.1",
     "@types/node": "^20.14.5",
     "eslint": "8.57.0",
