--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@empiricalrun/playwright-utils": "^0.13.5"
+    "@empiricalrun/playwright-utils": "^0.13.5",
+    "@playwright/test": "^1.47.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.1",
     "@types/node": "^20.14.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
