chore: upgrade utils to try multi-part upload (#266)
* chore: upgrade utils to try multi-part upload

* upgarde to 0.13.10

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,10 +10,10 @@ on:
       - "tests/**"
   pull_request:
     branches: main
-    paths:
-      - "tests/**"
-      - "playwright.config.ts"
-      - ".github/workflows/run-tests.yml"
+    # paths:
+    #   - "tests/**"
+    #   - "playwright.config.ts"
+    #   - ".github/workflows/run-tests.yml"
 
 jobs:
   run_tests:
