--- a/package.json
+++ b/package.json
@@ -18,13 +18,7 @@
     "@playwright/test": "^1.47.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.5",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unused-imports": "^3.2.0",
-    "typescript-eslint": "^7.11.0"
+    "@empiricalrun/eslint-config": "^0.4.2",
+    "@empiricalrun/typescript-config": "^0.3.0"
   }
 }
