--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: main
+          ref: run-trigger-type-env-var
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
