Revert "testing ad-hoc runs (#412)" (#413)
This reverts commit 29fd8f2b0fed155a37576555cfd2b0a0360ad0ce.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: run-trigger-type-env-var
+          ref: main
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
