--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: main
+          ref: ad-hoc-run-project-wildcard
           path: .github/test-gen-repo
 
       - uses: ./.github/test-gen-repo/actions/run-tests
