--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@empiricalrun/playwright-utils": "^0.15.0",
-    "@playwright/test": "^1.47.1"
+    "@playwright/test": "1.47.1"
   },
   "devDependencies": {
     "@empiricalrun/eslint-config": "^0.4.3",
     "@empiricalrun/typescript-config": "^0.3.0"
-  }
+  },
+  "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2"
 }
