ci: add EMPIRICALRUN_API_KEY secret

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,3 +36,4 @@ jobs:
           R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
           LOG_LEVEL: "debug"
           UPLOAD_MAX_QUEUE_SIZE: 1
+          EMPIRICALRUN_API_KEY: ${{ secrets.EMPIRICALRUN_API_KEY }}
