--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,3 +37,4 @@ jobs:
           LOG_LEVEL: "debug"
           UPLOAD_MAX_QUEUE_SIZE: 1
           EMPIRICALRUN_API_KEY: ${{ secrets.EMPIRICALRUN_API_KEY }}
+          MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
