ci: forgot secret

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,3 +38,4 @@ jobs:
           UPLOAD_MAX_QUEUE_SIZE: 1
           EMPIRICALRUN_API_KEY: ${{ secrets.EMPIRICALRUN_API_KEY }}
           MAILOSAUR_API_KEY: ${{ secrets.MAILOSAUR_API_KEY }}
+          VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
