chore: back to main task def

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           repository: empirical-run/test-generator
           token: ${{ secrets.PAT }}
-          ref: remove-vercel
+          ref: main
           path: .github/test-gen-repo
       - uses: ./.github/test-gen-repo/actions/run-tests
         with:
