--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   run_tests:
-    runs-on: warp-ubuntu-latest-arm64-8x
+    runs-on: ubuntu-latest
     steps:
       - name: Check out test-generator repo
         uses: actions/checkout@v4
